# cj_lightstatussim_code_challenge

./: .gitignore  BUILD_QUICK_START.md  CMakeLists.txt  Makefile  README.md  TESTING_CHANGES_SUMMARY.md  TEST_IMPLEMENTATION_SUMMARY.md  WINDOWS_TESTING_README.md  build_all.py  build_all_linux.sh  build_all_windows.ps1  main.cpp  run_tests.bat  run_tests.ps1  run_tests.py  run_tests.sh
build_debug_simple/: CMakeCache.txt  Makefile  cmake_install.cmake
build_debug_simple/package/cj_lightsimstatus_code_chal_linux_debug_simple/: cj_lightsimstatus_code_chal_linux_debug_simple
build_release/: CMakeCache.txt  Makefile  cj_lightsimstatus_code_chal_linux_release  cmake_install.cmake
includes/cj_lightsimstatus_code_chal/: HomeLights.h
src/: HomeLights.cpp
tests/: CMakeLists.txt  HomeLightsTests.cpp  IntegrationTests.cpp  MockHomeLights.h  README.md  TestFramework.h
